--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-toggle": "^4.1.2",
     "reactstrap": "^8.10.0",
     "rgt": "^1.0.7",
+    "sass": "^1.43.4",
     "use-dark-mode": "^2.3.1",
     "use-persisted-state": "^0.3.3",
     "web-vitals": "^1.0.1"
