--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sideway/address": "^4.1.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.23",
-    "@types/react": "^17.0.13",
-    "@types/react-dom": "^17.0.8",
+    "@types/react": "^16.8.0",
+    "@types/react-dom": "^16.8.0",
     "bootstrap": "^5.1.1",
+    "core-js": "^3.19.3",
+    "joi": "^17.5.0",
     "mdbreact": "^5.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-icons": "^4.2.0",
     "react-responsive": "^8.2.0",
     "react-scripts": "4.0.3",
